--- a/index.html
+++ b/index.html
@@ -76,14 +76,13 @@
             </p>
         </div>
         <div>
-            <p>As an artist, their projects uses code to explore concepts such
+            <p>As an artist, their projects use code to explore concepts such
                 as
-                identity politics, solidarity economy and decolonial teaching,
-                and
-                were
+                identity politics, solidarity economies and decolonial teaching.
+                Their work has been
                 showcased at <a
                     href="https://www.demofestival.org/presenters/duty-free">WSA
-                    (Demo
+                    (NEW INC Demo
                     Festival)</a>, <a
                     href="https://medium.com/processing-foundation/begincontour-%E5%BE%9E%E7%AD%89%E9%AB%98%E7%B7%9A%E9%96%8B%E5%A7%8B-a-critical-anti-colonial-and-intersectional-pedagogy-to-taiwanese-creative-f44d67fd0ccb">Processing
                     Foudation 2023 Fellowship</a>, <a
@@ -91,12 +90,12 @@
                     Hakka Affairs Council</a>.</p>
         </div>
         <div>
-            <p>As a firm believer to open source, they co-developed the beginner
-                friendly zine-coding javascript library <a
+            <p>A firm believer in open source, they co-developed the beginner
+                friendly zine-coding Javascript library <a
                     href="https://github.com/munusshih/p5.genzine">p5.genzine</a>,
                 and
                 have contributed
-                to other open sourced projects like <a
+                to other open-sourced projects like <a
                     href="https://p5js.org/">p5.js</a> and <a
                     href="https://mechanic.design/">mechanic.design</a>. </p>
         </div>
@@ -113,11 +112,11 @@
                     Coding
                     Festival</a>, <a
                     href="https://www.typeelectives.com/courses/techniculture-sp-24">Type
-                    Elective</a>,
+                    Electives</a>,
                 Google Dev Festival, and Type@Cooper.</p>
         </div>
         <div>
-            <p>They've also co-organized the <a
+            <p>They co-organized the <a
                     href="https://www.youtube.com/playlist?list=PLaQjHexP0AoYBnqQLZhqW9q-l-lFe2Sy7">2023
                     Processing Community Day Taiwan</a>. </p>
         </div>
