--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>MUNUS SHIH</title>
-    <link rel="stylesheet" href="styles.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
+    <link rel="stylesheet" target="_blank" href="styles.css">
+    <script
+        src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
 </head>
 
 <body class="page">
@@ -22,11 +23,16 @@
 
         <div class="container">
             <p class="page__paragraph">
-                They've developed generative design and websites for clients such
-                as <a href="newmuseum.org">New Museum</a>,
-                <a href="https://imageofthestudio.athleticsnyc.io/">AIGA</a>, <a
+                They've developed generative design and websites for clients
+                such
+                as <a target="_blank" href="https://newmuseum.org">New
+                    Museum</a>,
+                <a target="_blank"
+                    href="https://imageofthestudio.athleticsnyc.io/">AIGA</a>,
+                <a target="_blank"
                     href="https://athleticsnyc.com/work/xr">XR</a>, Amazon,
-                Okta, and <a href="https://shop.nybooks.com/">New York Review of
+                Okta, and <a target="_blank"
+                    href="https://shop.nybooks.com/">New York Review of
                     Books</a>.
             </p>
         </div>
@@ -34,36 +40,43 @@
         <div class="container">
             <p class="page__paragraph">
                 As an artist, their projects use code to explore concepts such
-                as identity politics, solidarity economies, and decolonial teaching.
-                Their work has been showcased at <a
+                as identity politics, solidarity economies, and decolonial
+                teaching.
+                Their work has been showcased at <a target="_blank"
                     href="https://www.demofestival.org/presenters/duty-free">WSA
-                    (NEW INC Demo Festival)</a>, <a
+                    (NEW INC Demo Festival)</a>, <a target="_blank"
                     href="https://medium.com/processing-foundation/begincontour-%E5%BE%9E%E7%AD%89%E9%AB%98%E7%B7%9A%E9%96%8B%E5%A7%8B-a-critical-anti-colonial-and-intersectional-pedagogy-to-taiwanese-creative-f44d67fd0ccb">Processing
-                    Foundation 2023 Fellowship</a>, <a
-                    href="https://www.werememberhakka.com/fc-finalists-workID-24.html">Taiwanese
-                    Hakka Affairs Council</a>.
+                    Foundation 2023 Fellowship</a>, Taiwanese
+                    Hakka Affairs Council.
             </p>
         </div>
 
         <div class="container">
             <p class="page__paragraph">
-                A firm believer in open source, they co-developed the beginner-friendly
-                zine-coding JavaScript library <a
+                A firm believer in open source, they co-developed the
+                beginner-friendly
+                zine-coding JavaScript library <a target="_blank"
                     href="https://github.com/munusshih/p5.genzine">p5.genzine</a>,
                 and have contributed to other open-sourced projects like <a
-                    href="https://p5js.org/">p5.js</a> and <a
+                    target="_blank" href="https://p5js.org/">p5.js</a> and <a
+                    target="_blank"
                     href="https://mechanic.design/">mechanic.design</a>.
             </p>
         </div>
 
         <div class="container">
             <p class="page__paragraph">
-                As a teacher, Munus has taught classes at Parsons and Cooper on Critical
-                Computation, <a href="https://ci2-munus.dutyfree.school/">Interaction
-                    Design</a>, and <a href="https://adpd.dutyfree.school/">Product
-                    Design</a>. They've also given talks and workshops at SVA, <a
-                    href="https://ccfest.rocks/ccfestnycjan282024">Creative Coding
-                    Festival</a>, <a
+                As a teacher, Munus has taught classes at Parsons and Cooper on
+                Critical
+                Computation, <a target="_blank"
+                    href="https://ci2-munus.dutyfree.school/">Interaction
+                    Design</a>, and <a target="_blank"
+                    href="https://adpd.dutyfree.school/">Product
+                    Design</a>. They've also given talks and workshops at SVA,
+                <a target="_blank"
+                    href="https://ccfest.rocks/ccfestnycjan282024">Creative
+                    Coding
+                    Festival</a>, <a target="_blank"
                     href="https://www.typeelectives.com/courses/techniculture-sp-24">Type
                     Electives</a>, Google Dev Festival, and Type@Cooper.
             </p>
@@ -71,7 +84,7 @@
 
         <div class="container">
             <p class="page__paragraph">
-                They co-organized the <a
+                They co-organized the <a target="_blank"
                     href="https://www.youtube.com/playlist?list=PLaQjHexP0AoYBnqQLZhqW9q-l-lFe2Sy7">2023
                     Processing Community Day Taiwan</a>.
             </p>
@@ -79,9 +92,10 @@
 
         <ul class="contact-list">
             <li class="contact-list__item">email: munusshih@gmail.com</li>
-            <li class="contact-list__item">instagram: <a
-                    href="https://www.instagram.com/munusshih/">@munusshih</a></li>
-            <li class="contact-list__item">github: <a
+            <li class="contact-list__item">instagram: <a target="_blank"
+                    href="https://www.instagram.com/munusshih/">@munusshih</a>
+            </li>
+            <li class="contact-list__item">github: <a target="_blank"
                     href="https://www.github.com/munusshih">@munusshih</a></li>
         </ul>
     </main>
