--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
                 <a target="_blank"
                     href="https://imageofthestudio.athleticsnyc.io/">AIGA</a>,
                 <a target="_blank"
-                    href="https://athleticsnyc.com/work/xr">XR</a>, Amazon,
+                    href="https://athleticsnyc.com/work/xr">XR</a>, <a
+                    href="https://athleticsnyc.com/work/amazon-design">Amazon</a>,
                 Okta, and <a target="_blank"
                     href="https://shop.nybooks.com/">New York Review of
                     Books</a>.
@@ -43,11 +44,10 @@
                 as identity politics, solidarity economies, and decolonial
                 teaching.
                 Their work has been showcased at <a target="_blank"
-                    href="https://www.demofestival.org/presenters/duty-free">WSA
-                    (NEW INC Demo Festival)</a>, <a target="_blank"
+                    href="https://www.demofestival.org/presenters/duty-free">New INC x New Museum DEMO Festival</a>, <a target="_blank"
                     href="https://medium.com/processing-foundation/begincontour-%E5%BE%9E%E7%AD%89%E9%AB%98%E7%B7%9A%E9%96%8B%E5%A7%8B-a-critical-anti-colonial-and-intersectional-pedagogy-to-taiwanese-creative-f44d67fd0ccb">Processing
-                    Foundation 2023 Fellowship</a>, Taiwanese
-                    Hakka Affairs Council.
+                    Foundation 2023 Fellowship</a> and Taiwanese
+                Hakka Affairs Council.
             </p>
         </div>
 
